--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,8 @@ okhttp = "5.0.0-alpha.2" # OkHttp
 google-services = "4.4.2"
 firebaseBom = "33.8.0"
 
+datastore = "1.1.7"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -95,6 +97,10 @@ firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore
 
 # Icons
 icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+
+# DataStore
+datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+datastore-preferences-core = { group = "androidx.datastore", name = "datastore-preferences-core", version.ref = "datastore" }
 
 # Google Services
 # google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
